--- a/css/navbar.css
+++ b/css/navbar.css
@@ -3,21 +3,17 @@
   margin: 0;
   text-decoration: none;
   list-style: none;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; }
 
 nav {
   background: #0082e62a;
   height: 80px;
   width: 100%;
   display: flex;
-  justify-content: space-around;
-}
+  justify-content: space-around; }
 
 label.logo {
   color: white;
@@ -25,19 +21,16 @@ label.logo {
   line-height: 80px;
   padding: 0 100px;
   font-weight: bold;
-  font-family: "Dancing Script", cursive;
-}
+  font-family: "Dancing Script", cursive; }
 
 nav ul {
   float: right;
-  margin-right: 20px;
-}
+  margin-right: 20px; }
 
 nav ul li {
   display: inline-block;
   line-height: 80px;
-  margin: 0 5px;
-}
+  margin: 0 5px; }
 
 nav ul li a {
   color: white;
@@ -45,14 +38,12 @@ nav ul li a {
   text-transform: uppercase;
   padding: 7px 13px;
   border-radius: 3px;
-  font-weight: bold;
-}
+  font-weight: bold; }
 
 a.active,
 a:hover {
   background: #1b9bff;
-  transition: 1s;
-}
+  transition: 1s; }
 
 .checkbtn {
   font-size: 30px;
@@ -61,26 +52,21 @@ a:hover {
   line-height: 80px;
   margin-right: 40px;
   cursor: pointer;
-  display: none;
-}
+  display: none; }
 
 #check {
-  display: none;
-}
+  display: none; }
+
 /**MOVIL**/
 @media (max-width: 750px) {
   .checkbtn {
     margin-left: 20px;
-    display: inline-block;
-  }
+    display: inline-block; }
   label.logo {
     font-size: 30px;
-    padding-left: 16px;
-  }
+    padding-left: 16px; }
   nav ul li a {
-    font-size: 16px;
-  }
-
+    font-size: 16px; }
   ul {
     display: flex;
     flex-direction: column;
@@ -92,27 +78,18 @@ a:hover {
     background: #1b4332;
     top: 80px;
     left: -100%;
-    transition: all 2s;
-  }
+    transition: all 2s; }
   nav ul li {
     margin: 50px 0;
     line-height: 80px;
-    margin-left: -150px;
-  }
+    margin-left: -150px; }
   nav ul li a {
-    font-size: 20px;
-  }
-  a:hover{
-    
-        background: none;
-        color: #0082e6;
-      
-  }
+    font-size: 20px; }
+  a:hover {
+    background: none;
+    color: #0082e6; }
   a.active {
     background: none;
-    color: #0082e6;
-  }
+    color: #0082e6; }
   #check:checked ~ ul {
-    left: 0;
-  }
-}
+    left: 0; } }
